<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="start|top"
        android:backgroundTint="@color/white"
        app:srcCompat="@drawable/homeimg_btn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/create_announce" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/red"
        android:text="Add Announcement Details: " />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Abstract_Input"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="Title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/body_Input"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:hint="Body/Details" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_announcebtn"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/red"
        android:layout_gravity="center"
        android:text="Create Announcement"
        android:textColor="@color/yellow"/>


</LinearLayout>