...
        android:text="HOME"
        android:layout_marginBottom="20dp"
        android:textSize="20dp"

        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:id="@+id/homeB">





    </Button>
...
